# BirthdayPresent

./: .gitignore  README.md  deep-research-report.md  electron-builder.yml  index.html  package-lock.json  package.json  run.bat  task.md  tsconfig.json  tsup.config.ts  vite.config.ts
.github/agents/: dismas.agent.md
.github/instructions/: dismas-downloader.instructions.md  github-pages-webapp.instructions.md
.github/workflows/: birthday-card.yml
data/: settings.json
docs/: research-integration.md
electron/: app-paths.ts  fallback-service.ts  main.ts  preload.ts  protocol.ts  sidecar-client.ts  system-status.ts  tool-installer.ts  tool-sources.ts
libs/: README.md
licenses/: THIRD_PARTY_NOTICES.md
scripts/: build-rust-sidecar.mjs  mock-sidecar.mjs
shared/: contracts.ts
src/: .gitignore
src-native/: .gitignore  Cargo.toml
src-native/src/: main.rs
src/renderer/: birthday-config.ts  global.d.ts  i18n.ts  main.ts  styles.css  theme.ts
src/types/: adm-zip.d.ts
themes/default_darkest/: manifest.json  theme.css
web/card/: config.js  index.html  main.js  styles.css
